# C-Code

./: README.md
Algorithm/: Algorithm.sln
Algorithm/Algorithm/: Algorithm.vcxproj  Algorithm.vcxproj.filters  main.cpp  skip_list.h
Algorithm/C++ Primer/: C++ Primer.vcxproj.filters  string.cpp  string.h
Algorithm/Debug/: Algorithm.ilk  C++ Primer.ilk
Design Pattern/: Design Pattern.sln
Design Pattern/Debug/: Design Pattern.ilk
Design Pattern/Design Pattern/: Decorator.h  Design Pattern.vcxproj  Design Pattern.vcxproj.filters  Observe.h  Strategy.h  Strategytest.h  abstract_factor_test.h  abstract_factory.h  adapt.h  adapt_test.h  command.h  command_test.h  decorator_test.h  facade.h  facade_test.h  factory.h  factory_test.h  iterator.h  iterator_test.h  main.cpp  observe_test.h  singleton.cpp  singleton.h  singletonTest.h  template_method.h  template_method_test.h
StringProcess/: StringProcess.sln
StringProcess/Debug/: StringProcess.ilk
StringProcess/StringProcess/: StringProcess.vcxproj  StringProcess.vcxproj.filters  content_process.cpp  content_process.h  cstring.cpp  cstring.h  folder_traversal.cpp  folder_traversal.h  main.cpp
classic/: classic.sln
classic/Debug/: classic.ilk
classic/classic/: CMakeLists.txt  classic.vcxproj  classic.vcxproj.filters  define.h  main.cpp  pool.h  rb_tree.cpp  rb_tree.h  rb_tree_test.cpp  rb_tree_test.h
classic/classic/Debug/: rb_tree_test.obj.enc  vc140.idb  vc142.idb
classic/classic/Debug/classic.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  classic.lastbuildstate  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog
classic/classic/common/: define.h  rand_tool.cpp  rand_tool.h  time.cpp  time.h
classic/classic/event/: event.h  event_test.h  event_timer.cpp  event_timer.h  event_timer_test.cpp
classic/classic/log/: log.cpp  log.h
classic/classic/mem_pool/: pool.cpp  pool.h  pool_test.cpp  pool_test.h
classic/classic/rbtree/: rb_tree.cpp  rb_tree.h  rb_tree_test.cpp  rb_tree_test.h
classic/classic/x64/Debug/: vc142.idb
classic/classic/x64/Debug/classic.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  classic.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
client/: client.sln
client/Debug/: client.ilk
client/client/: client.vcxproj  main.cpp
common/: common.sln
common/common/: common.vcxproj  common.vcxproj.filters
common/lib/: common.lib
complier/: complier.sln
complier/Debug/: complier.ilk
complier/complier/: complier.vcxproj  complier.vcxproj.filters  main.cpp
delete_repeat_log/: delete_repeat_log.sln
delete_repeat_log/Debug/: delete_repeat_log.ilk
delete_repeat_log/delete_repeat_log/: delete_repeat_log.vcxproj  delete_repeat_log.vcxproj.filters  main.cpp  trie.cpp
gidip_json/: gidip_json.sln
gidip_json/gidip_json/: common_method.cpp  gidip_json.vcxproj  gidip_json.vcxproj.filters  input.json  json.cpp  json.h  main.cpp  output.txt  read_json.cpp  read_json.h  reader.cpp  reader.h
json-master/json/: json.cpp  json.h  json.vcxproj  main.cpp  test.json
mysql/: mysql.sln
mysql/mysql/: main.cpp  mysql.vcxproj
proto/: proto.sln
proto/Debug/: proto.ilk
proto/proto/: main.cpp  proto.vcxproj
proto/protocol/: CMakeLists.txt  cm_activitytype.pb.cc  cm_activitytype.pb.h  cm_battletype.pb.cc  cm_battletype.pb.h  cm_roletype.pb.cc  cm_roletype.pb.h  cm_socialtype.pb.cc  cm_socialtype.pb.h  cs_activity.pb.cc  cs_activity.pb.h  cs_battle.pb.cc  cs_battle.pb.h  cs_chat.pb.cc  cs_chat.pb.h  cs_errorcode.pb.cc  cs_errorcode.pb.h  cs_gamesystem.pb.cc  cs_gamesystem.pb.h  cs_mail.pb.cc  cs_mail.pb.h  cs_protoid.pb.cc  cs_protoid.pb.h  cs_role.pb.cc  cs_role.pb.h  cs_social.pb.cc  cs_social.pb.h  ss_battle.pb.cc  ss_battle.pb.h  ss_center.pb.cc  ss_center.pb.h  ss_charge.pb.cc  ss_charge.pb.h  ss_chat.pb.cc  ss_chat.pb.h  ss_cross.pb.cc  ss_cross.pb.h  ss_db.pb.cc  ss_db.pb.h  ss_game.pb.cc  (+13 more)
proto/protocol/Debug/stormproto.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  lib.command.1.tlog  stormproto.lastbuildstate
robot/: C++.sln  robot.sln
script/: mysql_slow_log_stat.py
stl/: stl.sln
string-process/: string-process.sln
wind/: wind.sln
(+609 files in other folders)
